# rust-invoker

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/logic/: greeting.rs  mod.rs  rune.rs  spell.rs
src/routes/: greeting.rs  hero.rs  mod.rs  rune.rs  spell.rs
src/services/: hero_service.rs  mod.rs
src/state/: app_state.rs  hero_state.rs  mod.rs  spell_state.rs
